fix: make manager phase view children direct layout children for consistent gap

--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -5,5 +5,4 @@
   margin-left: -#{v.$spacing-md};
   margin-right: -#{v.$spacing-md};
   margin-top: -#{v.$spacing-md};
-  margin-bottom: v.$spacing-md;
 }
